--- a/userdashboard.html
+++ b/userdashboard.html
@@ -10,6 +10,8 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="userdashboard.css">
+
+    
     <title>Dashboard</title>
 </head>
 
@@ -31,8 +33,9 @@
                 </div>
                 <div class="d-flex ms-auto">
                     <!-- Buttons on the Right with a Gap -->
-                    <button id="dash-btn" class="btn btn-primary me-3" type="button">My Dashboard</button>
-                    <button id="auth-btn" class="btn btn-secondary" type="button">LOGIN/REGISTER</button>
+                    <button id="das-btn" class="  me-3 button-28" type="button">All Posts</button>
+                    
+                    <button id="auth-btn" class="  button-28" type="button">LOGIN/REGISTER</button>
                 </div>
             </div>
         </div>
